@@ -428,11 +428,6 @@ class FTPTest < Test::Unit::TestCase
 
   def test_list_fail
     commands = []
-    list_lines = [
-      "-rw-r--r--    1 0        0               0 Mar 30 11:22 foo.txt",
-      "-rw-r--r--    1 0        0               0 Mar 30 11:22 bar.txt",
-      "-rw-r--r--    1 0        0               0 Mar 30 11:22 baz.txt"
-    ]
     server = create_ftp_server { |sock|
       sock.print("220 (test_ftp).\r\n")
       commands.push(sock.gets)
@@ -445,9 +440,6 @@ class FTPTest < Test::Unit::TestCase
       sock.print("200 Switching to ASCII mode.\r\n")
       line = sock.gets
       commands.push(line)
-      port_args = line.slice(/\APORT (.*)/, 1).split(/,/)
-      host = port_args[0, 4].join(".")
-      port = port_args[4, 2].map(&:to_i).inject {|x, y| (x << 8) + y}
       sock.print("200 PORT command successful.\r\n")
       commands.push(sock.gets)
       sock.print("553 Requested action not taken.\r\n")
@@ -589,7 +581,6 @@ class FTPTest < Test::Unit::TestCase
 
   def test_retrbinary_fail
     commands = []
-    binary_data = (0..0xff).map {|i| i.chr}.join * 4 * 3
     server = create_ftp_server { |sock|
       sock.print("220 (test_ftp).\r\n")
       commands.push(sock.gets)
@@ -600,9 +591,6 @@ class FTPTest < Test::Unit::TestCase
       sock.print("200 Switching to Binary mode.\r\n")
       line = sock.gets
       commands.push(line)
-      port_args = line.slice(/\APORT (.*)/, 1).split(/,/)
-      host = port_args[0, 4].join(".")
-      port = port_args[4, 2].map(&:to_i).inject {|x, y| (x << 8) + y}
       sock.print("200 PORT command successful.\r\n")
       commands.push(sock.gets)
       sock.print("550 Requested action not taken.\r\n")
@@ -678,7 +666,6 @@ class FTPTest < Test::Unit::TestCase
   def test_storbinary_fail
     commands = []
     binary_data = (0..0xff).map {|i| i.chr}.join * 4 * 3
-    stored_data = nil
     server = create_ftp_server { |sock|
       sock.print("220 (test_ftp).\r\n")
       commands.push(sock.gets)
@@ -689,9 +676,6 @@ class FTPTest < Test::Unit::TestCase
       sock.print("200 Switching to Binary mode.\r\n")
       line = sock.gets
       commands.push(line)
-      port_args = line.slice(/\APORT (.*)/, 1).split(/,/)
-      host = port_args[0, 4].join(".")
-      port = port_args[4, 2].map(&:to_i).inject {|x, y| (x << 8) + y}
       sock.print("200 PORT command successful.\r\n")
       commands.push(sock.gets)
       sock.print("452 Requested file action aborted.\r\n")
